Major update to notebooks and modules
Changes include:
 * Reorganise notebooks to a more consistent structure
 * Add type hints to most Python modules
 * Add script (`run_notebooks.py`) to run notebooks with Papermill
 * Change `convert_notebooks` script from shell to Python

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -3,7 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "id": "416d11e4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:14:20.702256Z",
+     "iopub.status.busy": "2023-12-02T08:14:20.702100Z",
+     "iopub.status.idle": "2023-12-02T08:14:22.267000Z",
+     "shell.execute_reply": "2023-12-02T08:14:22.266274Z"
+    },
+    "papermill": {
+     "duration": 1.571774,
+     "end_time": "2023-12-02T08:14:22.268600",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:20.696826",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -19,8 +35,10 @@
     "import tempfile\n",
     "import warnings\n",
     "\n",
+    "import geopandas as gpd\n",
     "from gplately.tools import plate_isotherm_depth\n",
     "\n",
+    "from lib.assign_regions import assign_regions\n",
     "from lib.calculate_convergence import run_calculate_convergence\n",
     "from lib.check_files import (\n",
     "    check_source_data,\n",
@@ -32,6 +50,7 @@
     "from lib.coregister_magnetic import coregister_magnetic\n",
     "from lib.coregister_ocean_rasters import run_coregister_ocean_rasters\n",
     "from lib.create_study_area_polygons import run_create_study_area_polygons\n",
+    "from lib.erodep import calculate_erodep\n",
     "from lib.generate_unlabelled_points import generate_unlabelled_points\n",
     "from lib.misc import (\n",
     "    calculate_slab_flux,\n",
@@ -42,28 +61,54 @@
     "# Suppress occasional joblib warnings\n",
     "%env PYTHONWARNINGS=ignore::UserWarning\n",
     "\n",
-    "warnings.simplefilter(\"ignore\", UserWarning)"
+    "warnings.simplefilter(\"ignore\", UserWarning)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "id": "24504d52",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:14:22.279434Z",
+     "iopub.status.busy": "2023-12-02T08:14:22.279268Z",
+     "iopub.status.idle": "2023-12-02T08:14:22.282645Z",
+     "shell.execute_reply": "2023-12-02T08:14:22.282040Z"
+    },
+    "papermill": {
+     "duration": 0.010373,
+     "end_time": "2023-12-02T08:14:22.284144",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:22.273771",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "random_seed = 1234\n",
     "\n",
-    "n_jobs = 8\n",
+    "n_jobs = int(os.environ.get(\"N_JOBS\", 8))\n",
     "times = range(171)\n",
     "verbose = False\n",
     "\n",
-    "num_unlabelled = 200  # per timestep"
+    "num_unlabelled = 200  # per timestep\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "8070f64c",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004484,
+     "end_time": "2023-12-02T08:14:22.293246",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:22.288762",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Input and output files"
    ]
@@ -71,7 +116,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "id": "8cc369d6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:14:22.303465Z",
+     "iopub.status.busy": "2023-12-02T08:14:22.303311Z",
+     "iopub.status.idle": "2023-12-02T08:14:22.310078Z",
+     "shell.execute_reply": "2023-12-02T08:14:22.309472Z"
+    },
+    "papermill": {
+     "duration": 0.013652,
+     "end_time": "2023-12-02T08:14:22.311561",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:22.297909",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model_dir = \"plate_model\"\n",
@@ -80,6 +141,7 @@
     "data_dir = \"source_data\"\n",
     "check_source_data(data_dir, verbose=verbose)\n",
     "deposits_filename = os.path.join(data_dir, \"deposit_data.csv\")\n",
+    "regions_filename = os.path.join(data_dir, \"regions.shp\")\n",
     "agegrid_dir = os.path.join(data_dir, \"AgeGrids\")\n",
     "sedthick_dir = os.path.join(data_dir, \"SedimentThickness\")\n",
     "carbonate_dir = os.path.join(data_dir, \"CarbonateThickness\")\n",
@@ -94,6 +156,7 @@
     "    data_dir,\n",
     "    \"SubductedQuantities\",\n",
     ")\n",
+    "erodep_dir = os.path.join(data_dir, \"ErosionDeposition\")\n",
     "\n",
     "output_dir = \"extracted_data\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
@@ -118,13 +181,23 @@
     "    \"StaticGeometries\",\n",
     "    \"StaticPolygons\",\n",
     "    \"Clennett_2020_StaticPolygons.gpml\",\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "a45746ed",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004514,
+     "end_time": "2023-12-02T08:14:22.320678",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:22.316164",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Subducting plate data"
    ]
@@ -132,7 +205,23 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "id": "3e1a295a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:14:22.330717Z",
+     "iopub.status.busy": "2023-12-02T08:14:22.330566Z",
+     "iopub.status.idle": "2023-12-02T08:33:22.921674Z",
+     "shell.execute_reply": "2023-12-02T08:33:22.920870Z"
+    },
+    "papermill": {
+     "duration": 1140.598526,
+     "end_time": "2023-12-02T08:33:22.923690",
+     "exception": false,
+     "start_time": "2023-12-02T08:14:22.325164",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "with tempfile.TemporaryDirectory() as subduction_kinematics_dir:\n",
@@ -173,7 +262,6 @@
     "            \"water_thickness\",\n",
     "        ),\n",
     "        verbose=verbose,\n",
-    "        combined_filename=subduction_data_filename,\n",
     "    )\n",
     "subduction_data[\"plate_thickness (m)\"] = plate_isotherm_depth(\n",
     "    subduction_data[\"seafloor_age (Ma)\"],\n",
@@ -181,13 +269,25 @@
     ")\n",
     "subduction_data = calculate_water_thickness(subduction_data)\n",
     "subduction_data = calculate_slab_flux(subduction_data)\n",
-    "subduction_data = calculate_slab_dip(subduction_data)"
+    "subduction_data = calculate_slab_dip(subduction_data)\n",
+    "if subduction_data_filename is not None:\n",
+    "    subduction_data.to_csv(subduction_data_filename, index=False)\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "1d88d599",
+   "metadata": {
+    "papermill": {
+     "duration": 0.034247,
+     "end_time": "2023-12-02T08:33:22.983811",
+     "exception": false,
+     "start_time": "2023-12-02T08:33:22.949564",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Create study area polygons along subduction zones"
    ]
@@ -195,7 +295,23 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "id": "6e7f3421",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:33:23.090130Z",
+     "iopub.status.busy": "2023-12-02T08:33:23.089866Z",
+     "iopub.status.idle": "2023-12-02T08:34:09.586116Z",
+     "shell.execute_reply": "2023-12-02T08:34:09.585063Z"
+    },
+    "papermill": {
+     "duration": 46.563862,
+     "end_time": "2023-12-02T08:34:09.588172",
+     "exception": false,
+     "start_time": "2023-12-02T08:33:23.024310",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "run_create_study_area_polygons(\n",
@@ -206,13 +322,23 @@
     "    output_dir=study_area_dir,\n",
     "    verbose=verbose,\n",
     "    return_output=False,\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "5dd1c434",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004533,
+     "end_time": "2023-12-02T08:34:09.597990",
+     "exception": false,
+     "start_time": "2023-12-02T08:34:09.593457",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Generate random unlabelled data points"
    ]
@@ -220,7 +346,23 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "id": "f0eb6f15",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:34:09.631896Z",
+     "iopub.status.busy": "2023-12-02T08:34:09.631607Z",
+     "iopub.status.idle": "2023-12-02T08:52:14.258376Z",
+     "shell.execute_reply": "2023-12-02T08:52:14.257662Z"
+    },
+    "papermill": {
+     "duration": 1084.634481,
+     "end_time": "2023-12-02T08:52:14.260195",
+     "exception": false,
+     "start_time": "2023-12-02T08:34:09.625714",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "unlabelled = generate_unlabelled_points(\n",
@@ -232,13 +374,23 @@
     "    topological_features=feature_filenames,\n",
     "    rotation_model=rotation_filenames,\n",
     "    verbose=verbose,\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "168d3871",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004613,
+     "end_time": "2023-12-02T08:52:14.270169",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:14.265556",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Combine labelled deposit/non-deposit data with random unlabelled data"
    ]
@@ -246,7 +398,23 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "id": "a8fb758c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:52:14.280407Z",
+     "iopub.status.busy": "2023-12-02T08:52:14.280251Z",
+     "iopub.status.idle": "2023-12-02T08:52:51.611164Z",
+     "shell.execute_reply": "2023-12-02T08:52:51.610439Z"
+    },
+    "papermill": {
+     "duration": 37.338329,
+     "end_time": "2023-12-02T08:52:51.613056",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:14.274727",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "combined_points = combine_point_data(\n",
@@ -260,13 +428,24 @@
     "    max_time=max(times),\n",
     "    n_jobs=n_jobs,\n",
     "    verbose=verbose,\n",
-    ")"
+    ")\n",
+    "del unlabelled\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "ad8e6307",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004683,
+     "end_time": "2023-12-02T08:52:51.622973",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:51.618290",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Assign subduction data to point deposit/non-deposit/unlabelled data"
    ]
@@ -274,7 +453,23 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "id": "3bf8e4fd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:52:51.633574Z",
+     "iopub.status.busy": "2023-12-02T08:52:51.633285Z",
+     "iopub.status.idle": "2023-12-02T08:52:56.569344Z",
+     "shell.execute_reply": "2023-12-02T08:52:56.568505Z"
+    },
+    "papermill": {
+     "duration": 4.943995,
+     "end_time": "2023-12-02T08:52:56.571574",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:51.627579",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "coregistered_data = run_coregister_combined_point_data(\n",
@@ -282,13 +477,24 @@
     "    subduction_data=subduction_data,\n",
     "    n_jobs=n_jobs,\n",
     "    verbose=verbose,\n",
-    ")"
+    ")\n",
+    "del combined_points, subduction_data\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "f23026ea",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00507,
+     "end_time": "2023-12-02T08:52:56.582520",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:56.577450",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Assign magnetic anomaly and crustal thickness data to point data"
    ]
@@ -296,7 +502,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "id": "a82404e1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:52:56.594007Z",
+     "iopub.status.busy": "2023-12-02T08:52:56.593850Z",
+     "iopub.status.idle": "2023-12-02T08:54:14.355366Z",
+     "shell.execute_reply": "2023-12-02T08:54:14.354736Z"
+    },
+    "papermill": {
+     "duration": 77.769646,
+     "end_time": "2023-12-02T08:54:14.357271",
+     "exception": false,
+     "start_time": "2023-12-02T08:52:56.587625",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "coregistered_data = run_coregister_crustal_thickness(\n",
@@ -309,42 +531,171 @@
     "    data=coregistered_data,\n",
     "    filename=mag_anomaly_filename,\n",
     "    n_jobs=n_jobs,\n",
-    ")\n",
-    "coregistered_data.to_csv(output_filename, index=False)"
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40319403",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004696,
+     "end_time": "2023-12-02T08:54:14.367428",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:14.362732",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Calculate cumulative erosion"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "id": "47f23804",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:54:14.377901Z",
+     "iopub.status.busy": "2023-12-02T08:54:14.377752Z",
+     "iopub.status.idle": "2023-12-02T08:54:53.735791Z",
+     "shell.execute_reply": "2023-12-02T08:54:53.734969Z"
+    },
+    "papermill": {
+     "duration": 39.36577,
+     "end_time": "2023-12-02T08:54:53.737945",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:14.372175",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "coregistered_data = calculate_erodep(\n",
+    "    coregistered_data,\n",
+    "    input_dir=erodep_dir,\n",
+    "    n_jobs=n_jobs,\n",
+    "    column_name=\"erosion (m)\",\n",
+    "    verbose=verbose,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b973e4e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005668,
+     "end_time": "2023-12-02T08:54:53.749448",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:53.743780",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Assign data to regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "90f34d8b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:54:53.761308Z",
+     "iopub.status.busy": "2023-12-02T08:54:53.761103Z",
+     "iopub.status.idle": "2023-12-02T08:54:53.897166Z",
+     "shell.execute_reply": "2023-12-02T08:54:53.896388Z"
+    },
+    "papermill": {
+     "duration": 0.144157,
+     "end_time": "2023-12-02T08:54:53.898838",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:53.754681",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "points = gpd.GeoSeries.from_xy(\n",
+    "    coregistered_data[\"present_lon\"],\n",
+    "    coregistered_data[\"present_lat\"],\n",
+    "    index=coregistered_data.index,\n",
+    ")\n",
+    "coregistered_data[\"region\"] = assign_regions(\n",
+    "    points,\n",
+    "    regions=regions_filename,\n",
+    ")\n",
+    "del points\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "42c75518",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-12-02T08:54:53.910049Z",
+     "iopub.status.busy": "2023-12-02T08:54:53.909883Z",
+     "iopub.status.idle": "2023-12-02T08:54:55.536714Z",
+     "shell.execute_reply": "2023-12-02T08:54:55.536039Z"
+    },
+    "papermill": {
+     "duration": 1.634336,
+     "end_time": "2023-12-02T08:54:55.538366",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:53.904030",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "source                      region  label     \n",
-       "Diaz-Rodriguez et al. 2021  NAm     negative         45\n",
-       "                                    positive        155\n",
-       "                            SAm     negative        347\n",
-       "                                    positive         35\n",
-       "random                      NAm     unlabelled     7515\n",
-       "                            SAm     unlabelled     6488\n",
-       "                            other   unlabelled    20206\n",
+       "source                      region          label     \n",
+       "Diaz-Rodriguez et al. 2021  North America   negative        57\n",
+       "                                            positive       170\n",
+       "                            South America   negative       979\n",
+       "                                            positive       126\n",
+       "random                      East Asia       unlabelled    4549\n",
+       "                            North America   unlabelled    7359\n",
+       "                            Other           unlabelled    4104\n",
+       "                            South America   unlabelled    6234\n",
+       "                            Southeast Asia  unlabelled    6758\n",
+       "                            Tethys          unlabelled    6984\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coregistered_data.groupby([\"source\", \"region\", \"label\"]).size()"
+    "coregistered_data.to_csv(output_filename, index=False)\n",
+    "\n",
+    "coregistered_data.groupby([\"source\", \"region\", \"label\"]).size()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "da5291f4",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00514,
+     "end_time": "2023-12-02T08:54:55.549105",
+     "exception": false,
+     "start_time": "2023-12-02T08:54:55.543965",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -365,10 +716,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   },
-  "orig_nbformat": 4
+  "papermill": {
+   "default_parameters": {},
+   "duration": 2438.447061,
+   "end_time": "2023-12-02T08:54:58.273441",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "00a-extract_training_data.ipynb",
+   "output_path": "00a-extract_training_data_output.ipynb",
+   "parameters": {},
+   "start_time": "2023-12-02T08:14:19.826380",
+   "version": "2.4.0"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
