--- a/02a-create_probability_maps_global.ipynb
+++ b/02a-create_probability_maps_global.ipynb
@@ -3,13 +3,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "f09ddee5",
+   "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.003377,
-     "end_time": "2023-12-02T10:11:03.117494",
+     "duration": 0.003153,
+     "end_time": "2023-12-15T05:37:02.589324",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.114117",
+     "start_time": "2023-12-15T05:37:02.586171",
      "status": "completed"
     },
     "tags": []
@@ -17,25 +17,25 @@
    "source": [
     "## Probability grids\n",
     "\n",
-    "This notebook creates the time-dependent probability maps and writes them to file (`.nc` format). The notebook `01-create_classifiers.ipynb` must have been run previously."
+    "This notebook creates the time-dependent probability maps and writes them to file (`.nc` format). The notebook `01a-create_classifiers_global.ipynb` must have been run previously."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ec9f49db",
+   "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.124123Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.123975Z",
-     "iopub.status.idle": "2023-12-02T10:11:03.129242Z",
-     "shell.execute_reply": "2023-12-02T10:11:03.128816Z"
+     "iopub.execute_input": "2023-12-15T05:37:02.596376Z",
+     "iopub.status.busy": "2023-12-15T05:37:02.596132Z",
+     "iopub.status.idle": "2023-12-15T05:37:02.603966Z",
+     "shell.execute_reply": "2023-12-15T05:37:02.603094Z"
     },
     "papermill": {
-     "duration": 0.010213,
-     "end_time": "2023-12-02T10:11:03.130568",
+     "duration": 0.013276,
+     "end_time": "2023-12-15T05:37:02.605673",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.120355",
+     "start_time": "2023-12-15T05:37:02.592397",
      "status": "completed"
     },
     "tags": []
@@ -48,19 +48,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8678b7a7",
+   "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.135915Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.135772Z",
-     "iopub.status.idle": "2023-12-02T10:11:04.990836Z",
-     "shell.execute_reply": "2023-12-02T10:11:04.990361Z"
+     "iopub.execute_input": "2023-12-15T05:37:02.612443Z",
+     "iopub.status.busy": "2023-12-15T05:37:02.612204Z",
+     "iopub.status.idle": "2023-12-15T05:37:04.499199Z",
+     "shell.execute_reply": "2023-12-15T05:37:04.498578Z"
     },
     "papermill": {
-     "duration": 1.859901,
-     "end_time": "2023-12-02T10:11:04.992716",
+     "duration": 1.892455,
+     "end_time": "2023-12-15T05:37:04.501051",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.132815",
+     "start_time": "2023-12-15T05:37:02.608596",
      "status": "completed"
     },
     "tags": []
@@ -83,19 +83,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53cac4c4",
+   "id": "7c013b25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:04.999606Z",
-     "iopub.status.busy": "2023-12-02T10:11:04.999232Z",
-     "iopub.status.idle": "2023-12-02T10:11:05.005093Z",
-     "shell.execute_reply": "2023-12-02T10:11:05.004699Z"
+     "iopub.execute_input": "2023-12-15T05:37:04.508343Z",
+     "iopub.status.busy": "2023-12-15T05:37:04.507975Z",
+     "iopub.status.idle": "2023-12-15T05:37:04.513942Z",
+     "shell.execute_reply": "2023-12-15T05:37:04.513421Z"
     },
     "papermill": {
-     "duration": 0.010698,
-     "end_time": "2023-12-02T10:11:05.006447",
+     "duration": 0.01104,
+     "end_time": "2023-12-15T05:37:04.515427",
      "exception": false,
-     "start_time": "2023-12-02T10:11:04.995749",
+     "start_time": "2023-12-15T05:37:04.504387",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x7f4240053e10>"
+       "<dask.config.set at 0x7fa2b8563690>"
       ]
      },
      "execution_count": 3,
@@ -120,13 +120,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "0b2519c9",
+   "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002744,
-     "end_time": "2023-12-02T10:11:05.012078",
+     "duration": 0.002919,
+     "end_time": "2023-12-15T05:37:04.521529",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.009334",
+     "start_time": "2023-12-15T05:37:04.518610",
      "status": "completed"
     },
     "tags": []
@@ -138,19 +138,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5cfb3705",
+   "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:05.018716Z",
-     "iopub.status.busy": "2023-12-02T10:11:05.018570Z",
-     "iopub.status.idle": "2023-12-02T10:11:15.524617Z",
-     "shell.execute_reply": "2023-12-02T10:11:15.523927Z"
+     "iopub.execute_input": "2023-12-15T05:37:04.528195Z",
+     "iopub.status.busy": "2023-12-15T05:37:04.528048Z",
+     "iopub.status.idle": "2023-12-15T05:37:20.681227Z",
+     "shell.execute_reply": "2023-12-15T05:37:20.680608Z"
     },
     "papermill": {
-     "duration": 10.511404,
-     "end_time": "2023-12-02T10:11:15.526436",
+     "duration": 16.158618,
+     "end_time": "2023-12-15T05:37:20.683131",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.015032",
+     "start_time": "2023-12-15T05:37:04.524513",
      "status": "completed"
     },
     "tags": []
@@ -171,13 +171,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "9529131c",
+   "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.003072,
-     "end_time": "2023-12-02T10:11:15.533135",
+     "duration": 0.002907,
+     "end_time": "2023-12-15T05:37:20.689517",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.530063",
+     "start_time": "2023-12-15T05:37:20.686610",
      "status": "completed"
     },
     "tags": []
@@ -189,19 +189,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "196a6d7e",
+   "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:15.540230Z",
-     "iopub.status.busy": "2023-12-02T10:11:15.540078Z",
-     "iopub.status.idle": "2023-12-02T10:14:09.334063Z",
-     "shell.execute_reply": "2023-12-02T10:14:09.333217Z"
+     "iopub.execute_input": "2023-12-15T05:37:20.696353Z",
+     "iopub.status.busy": "2023-12-15T05:37:20.696198Z",
+     "iopub.status.idle": "2023-12-15T05:40:40.289992Z",
+     "shell.execute_reply": "2023-12-15T05:40:40.289296Z"
     },
     "papermill": {
-     "duration": 173.799602,
-     "end_time": "2023-12-02T10:14:09.335773",
+     "duration": 199.601423,
+     "end_time": "2023-12-15T05:40:40.293889",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.536171",
+     "start_time": "2023-12-15T05:37:20.692466",
      "status": "completed"
     },
     "tags": []
@@ -218,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:02:31.636297)\n"
+      "Done! (duration: 0:02:46.127116)\n"
      ]
     },
     {
@@ -232,12 +232,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:00:22.149152)\n"
+      "Done! (duration: 0:00:33.458220)\n"
      ]
     }
    ],
    "source": [
-    "output_dir = os.path.join(\"outputs\", \"Americas\")\n",
+    "output_dir = os.path.join(\"outputs\", \"global\")\n",
     "\n",
     "for algorithm in (\"PU\", \"SVM\"):\n",
     "    print(\n",
@@ -272,18 +272,20 @@
     "    probabilities.to_csv(probabilities_filename, index=False)\n",
     "    del probabilities, model\n",
     "    duration = timedelta(seconds=time.time() - t0)\n",
-    "    print(f\"Done! (duration: {duration})\", flush=True)\n"
+    "    print(f\"Done! (duration: {duration})\", flush=True)\n",
+    "\n",
+    "del point_data\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dfce6d61",
+   "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.003316,
-     "end_time": "2023-12-02T10:14:09.343193",
+     "duration": 0.003349,
+     "end_time": "2023-12-15T05:40:40.300769",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.339877",
+     "start_time": "2023-12-15T05:40:40.297420",
      "status": "completed"
     },
     "tags": []
@@ -295,19 +297,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e1b3c0f",
+   "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:14:09.351393Z",
-     "iopub.status.busy": "2023-12-02T10:14:09.350900Z",
-     "iopub.status.idle": "2023-12-02T10:23:06.041180Z",
-     "shell.execute_reply": "2023-12-02T10:23:06.040350Z"
+     "iopub.execute_input": "2023-12-15T05:40:40.308486Z",
+     "iopub.status.busy": "2023-12-15T05:40:40.308240Z",
+     "iopub.status.idle": "2023-12-15T05:48:03.314227Z",
+     "shell.execute_reply": "2023-12-15T05:48:03.313237Z"
     },
     "papermill": {
-     "duration": 536.699273,
-     "end_time": "2023-12-02T10:23:06.045768",
+     "duration": 443.014024,
+     "end_time": "2023-12-15T05:48:03.318049",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.346495",
+     "start_time": "2023-12-15T05:40:40.304025",
      "status": "completed"
     },
     "tags": []
@@ -324,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!\n"
+      "Done! (duration: 0:03:35.476700)\n"
      ]
     },
     {
@@ -338,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!\n"
+      "Done! (duration: 0:03:47.519718)\n"
      ]
     }
    ],
@@ -349,6 +351,7 @@
     "        end=\"\",\n",
     "        flush=True,\n",
     "    )\n",
+    "    t0 = time.time()\n",
     "\n",
     "    subdir = os.path.join(output_dir, algorithm)\n",
     "    probabilities_filename = os.path.join(\n",
@@ -367,19 +370,20 @@
     "        threads=n_jobs,\n",
     "        extent=(-180, 180, -90, 90),\n",
     "    )\n",
-    "    print(\"Done!\", flush=True)\n"
+    "    duration = timedelta(seconds=time.time() - t0)\n",
+    "    print(f\"Done! (duration: {duration})\", flush=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269b4994",
+   "id": "01345ac5",
    "metadata": {
     "papermill": {
-     "duration": 0.003581,
-     "end_time": "2023-12-02T10:23:06.053107",
+     "duration": 0.003605,
+     "end_time": "2023-12-15T05:48:03.325558",
      "exception": false,
-     "start_time": "2023-12-02T10:23:06.049526",
+     "start_time": "2023-12-15T05:48:03.321953",
      "status": "completed"
     },
     "tags": []
@@ -408,14 +412,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 726.461321,
-   "end_time": "2023-12-02T10:23:08.775783",
+   "duration": 664.284569,
+   "end_time": "2023-12-15T05:48:06.148601",
    "environment_variables": {},
    "exception": null,
-   "input_path": "02-create_probability_maps.ipynb",
-   "output_path": "02-create_probability_maps_output.ipynb",
+   "input_path": "02a-create_probability_maps_global.ipynb",
+   "output_path": "02a-create_probability_maps_global_output.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T10:11:02.314462",
+   "start_time": "2023-12-15T05:37:01.864032",
    "version": "2.4.0"
   }
  },
